Bugfix for not showing the adventurous hint

--- a/pdp-gui/src/stylesheets/modules/playground.sass
+++ b/pdp-gui/src/stylesheets/modules/playground.sass
@@ -35,7 +35,7 @@
   .adventurous
     display: inline-block
     float: right
-    max-width: 140px
+    max-width: 160px
     position: relative
     font-size: small
     margin-right: 20px
@@ -48,8 +48,8 @@
       color: $medium-grey
     i
       position: absolute
-      right: -8px
-      top: -22px
+      right: 0px
+      top: -14px
       font-size: 22px
       color: $blue
 
